deployment/deploy-graph.yaml
apiVersion: apps/v1
kind:  StatefulSet
metadata:
  name: graph-tic
spec:
  serviceName: "graph-tic"
  selector:
    matchLabels:
      app: graph-tic
  replicas: 1
  template: # je mets des labels sur les pods-> le déploiement donenra naissance à des pods auxquels le label nginxlabel1 sera donné
    metadata:
      labels:
        app: graph-tic
    spec:
      volumes:
        - name: volumepartage # verif de la disponibilité de la pvc
          persistentVolumeClaim:
            claimName: espace-graph

      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: Always # Je peux delete le pod pour qu'il aille chercher : la nouvelle image sur dockerhub
          volumeMounts:
            - mountPath: /usr/share/nginx/html  # c'est l'endroit dans le docker nginx où on veut monter le volume ie où on veut voir les fixchiers qu'on aura plcé grâce à l'init docker
              name: volumepartage
