deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graph-tic
spec:
  tls: # https = http + tls -> couche de confidentialité, client et serveur ne parlent pas en clair mais definissent un tunnel de confidentialité dans lequel ils sont les seuls à comprendre le contenu
    - hosts:
        - graph-tic.kub.sspcloud.fr
  rules:
  - host:  graph-tic.kub.sspcloud.fr

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: # c'est bien le nom du service
            name: graph-tic
            port: 
              number: 80
